--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
 				<div class="charaIndivi" style="user-select: auto;">
 					<div class="charaBox chara1" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara01_kihati.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">111</p>
+						<p class="text" style="user-select: auto;">신교고쿠 거리에 있는 호라이 불구점에서 일하며, 기계 수리도 맡는 전기를 각별히 사랑하는 소년. 15세. 일찍이 오사카에서 개최되었던 제5회 내국권업박람회에서, 전기로 움직이는 근미래의 기계들에 매료되어 전기에 흥미를 가지게 된다. 「20세기는 전기의 세기」라고 믿으며, 미래의 전기 발명품을 상상한 『전기목록』을 집필하였다. 집은 절이지만, 신을 믿을 수 없게 되어 아버지와 크게 싸운 뒤로, 집을 나와있다. 어두운 곳을 싫어한다.</p>
 					</div>
 					<div class="charaBox chara2" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara02_inako.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">222</p>
+						<p class="text" style="user-select: auto;">교토 후시미 지역의 모모카와 양조장의 둘째 딸로 자랐다. 15세. 순수하고 활발한 성격이지만, 둔하고 실수도 많아, 언제나 아버지인 진에몬으로부터 질책을 받고 있다. 무엇이든 할 수 있는 언니와 비교하면서, 자신의 존재를 비관하고 있다. 신을 믿어 의심치 않고, 무엇인가 곤란할 때에는 후시미 이나리의 아쿠비 다이묘진에게 기도하러 간다. 「내 장점이라고는 믿는 것 밖에 없으니까」가 말버릇. 맨주먹으로 쥐를 잡는 일만은 누구에게도 지지 않는다.</p>
 					</div>
 					<div class="charaBox chara3" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara03_noriko.png" style="user-select: auto;"></p>
@@ -215,11 +215,11 @@
 					</div>
 					<div class="charaBox chara4" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara04_kengo.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">444「<ruby style="user-select: auto;">444<rt style="user-select: auto;">444</p>
+						<p class="text" style="user-select: auto;">444</p>
 					</div>
 					<div class="charaBox chara5" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara05_seiroku.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">喜八の兄。精悍としているが、細い体つきでいつもへらへらしている。人をからかうところがあり、喜八には「嘘つき」と警戒されている。喜八に電気の魅力を教えた張本人であり、神仏への疑念や自由奔放な振る舞い方も彼譲り。高いところが大好きで、夢はエッフェル塔に登ること。喜八が父に燃やされそうになった『電氣目録』を預かった。</p>
+						<p class="text" style="user-select: auto;">555</p>
 					</div>
 				</div>
 			</div>
