--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 				</div>
 				<div class="textBox" style="user-select: auto;">
 					<p class="copy copy2" style="user-select: auto;">「우리와 함께 죽어서, 극락정토에 데려다 줄래?」</p>
-					<p class="text para1" style="user-select: auto;">메이지 40년. 여름. 교토 후시미에 사는 <ruby style="user-select: auto;"> 모모카와 이나코<rt style="user-select: auto;"></rt></ruby>는 무슨 일을 해도 잘 되지 않아, 아버지에게 질책받는 나날을 보내고 있었다. 그녀에게 유일한 구원은 신에게 기도하고 믿는 것 뿐이었다. 여느 날처럼 후시미 이나리 산에서 기도를 하고 있으면, 「보이지 않는 것은 믿을 수 없다」는 자유분방한 소년・<ruby style="user-select: auto;">사카모토 키하치<rt style="user-select: auto;"></rt></ruby>와 만났다. 그는 신을 부정하며, 앞으로는 전기의 시대라고 장담한다.</p>
+					<p class="text para1" style="user-select: auto;">메이지 40년. 여름. 교토 후시미에 사는 <ruby style="user-select: auto;"> 모모카와 이나코<rt style="user-select: auto;"></rt></ruby>는 무슨 일을 해도 잘 되지 않아, 아버지에게 질책받는 나날을 보내고 있었다. 그녀에게 유일한 구원은 신에게 기도하고 믿는 것 뿐이었다. 여느 날처럼 후시미 이나리 산에서 기도를 하고 있으면, 「보이지 않는 것은 믿을 수 없다」는 자유분방한 소년·<ruby style="user-select: auto;">사카모토 키하치<rt style="user-select: auto;"></rt></ruby>와 만났다. 그는 신을 부정하며, 앞으로는 전기의 시대라고 장담한다.</p>
 					<p class="text para2" style="user-select: auto;">그러던 차에 이나코에게 갑자기 결혼 이야기가 들려왔다. 아버지의 일방적인 결정에, 자신의 가치는 이 정도일 뿐이라며 체념하는 이나코. 키하치는 그런 그녀의 도망치고 싶은 마음을 끌어내 집에서 데리고 나왔다.</p>
-					<p class="text para3" style="user-select: auto;">결혼을 막을 유일한 방법은, 기서『<ruby style="user-select: auto;">전기목록<rt style="user-select: auto;"></rt></ruby>』을 찾아내는 것. 그것은 키하치가 어렸을 때 쓴 전기에 관한 예언서로 일찍이 형・<ruby style="user-select: auto;">세이로쿠<rt style="user-select: auto;"></rt></ruby>가 들고 가버려 행방이 묘연한 상태였다. 키하치와 이나코<span class="dash" style="user-select: auto;">――</span> 두 사람은『전기목록』을 찾아 교토・시가에서 도망다닌다.</p>
+					<p class="text para3" style="user-select: auto;">결혼을 막을 유일한 방법은, 기서『<ruby style="user-select: auto;">전기목록<rt style="user-select: auto;"></rt></ruby>』을 찾아내는 것. 그것은 키하치가 어렸을 때 쓴 전기에 관한 예언서로 일찍이 형·<ruby style="user-select: auto;">세이로쿠<rt style="user-select: auto;"></rt></ruby>가 들고 가버려 행방이 묘연한 상태였다. 키하치와 이나코<span class="dash" style="user-select: auto;">――</span> 두 사람은『전기목록』을 찾아 교토·시가에서 도망다닌다.</p>
 					<p class="text para4" style="user-select: auto;">사라진 『전기목록』. 거기에 숨겨져 있는 비밀이란<span class="dash" style="user-select: auto;">――</span>.</p>
 				</div>
 			</div>
@@ -203,19 +203,19 @@
 				<div class="charaIndivi" style="user-select: auto;">
 					<div class="charaBox chara1" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara01_kihati.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">신교고쿠 거리에 있는 호라이 불구점에서 일하며, 기계 수리도 맡는 전기를 각별히 사랑하는 소년. 15세. 일찍이 오사카에서 개최되었던 제5회 내국권업박람회에서, 전기로 움직이는 근미래의 기계들에 매료되어 전기에 흥미를 가지게 된다. 「20세기는 전기의 세기」라고 믿으며, 미래의 전기 발명품을 상상한 『전기목록』을 집필하였다. 집은 절이지만, 신을 믿을 수 없게 되어 아버지와 크게 싸운 뒤로, 집을 나와있다. 어두운 곳을 싫어한다.</p>
+						<p class="text" style="user-select: auto;">신교고쿠 거리에 있는 호라이 불구점에서 일하며, 기계 수리도 맡는 전기를 각별히 사랑하는 소년. 15세. 일찍이 오사카에서 개최되었던 제5회 내국권업박람회에서, 전기로 움직이는 근미래의 기계들에 매료되어 전기에 흥미를 가지게 된다. 「20세기는 전기의 세기」라고 믿으며, 미래의 전기 발명품을 상상한 『전기목록』을 집필하였다. 집은 절이지만, 신을 믿을 수 없게 되어 아버지와 크게 싸운 뒤로, 집을 나왔다. 어두운 곳에 익숙하지 않다.</p>
 					</div>
 					<div class="charaBox chara2" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara02_inako.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">교토 후시미 지역의 모모카와 양조장의 둘째 딸로 자랐다. 15세. 순수하고 활발한 성격이지만, 둔하고 실수도 많아, 언제나 아버지인 진에몬으로부터 질책을 받고 있다. 무엇이든 할 수 있는 언니와 비교하면서, 자신의 존재를 비관하고 있다. 신을 믿어 의심치 않고, 무엇인가 곤란할 때에는 후시미 이나리의 아쿠비 다이묘진에게 기도하러 간다. 「내 장점이라고는 믿는 것 밖에 없으니까」가 말버릇. 맨주먹으로 쥐를 잡는 일만은 누구에게도 지지 않는다.</p>
+						<p class="text" style="user-select: auto;">교토 후시미 지역의 모모카와 양조장의 둘째 딸로 자랐다. 15세. 순수하고 활발한 성격이지만, 둔하고 실수도 많아, 언제나 아버지인 진에몬으로부터 질책을 받고 있다. 무엇이든 할 수 있는 언니와 비교하면서, 자신의 존재를 비관하고 있다. 신을 믿어 의심치 않으며, 무엇인가 곤란할 때에는 후시미 이나리의 아쿠비 다이묘진에게 기도하러 간다. 「내 장점이라고는 믿는 것 밖에 없으니까」가 말버릇. 맨주먹으로 쥐를 잡는 일만은 누구에게도 지지 않는다.</p>
 					</div>
 					<div class="charaBox chara3" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara03_noriko.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">333</p>
+						<p class="text" style="user-select: auto;">이나코의 누나. 20세. 이나코와는 대조적으로, 어른스럽고 뭐든지 착착 해내는 재색을 겸비한 여성. 소꿉친구인 리쿠는 약혼자이지만, 만나면 말다툼만 벌이는 상태여서 현재 결혼은 보류된 상태다. 흰색 기모노와 아름다운 빛깔의 긴 머리는 이나코의 동경의 대상. 양조장에서 태어나 자랐지만, 술 냄새에는 서툴다.</p>
 					</div>
 					<div class="charaBox chara4" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara04_kengo.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">444</p>
+						<p class="text" style="user-select: auto;">오쓰 미곡상·구가 쓰네키치 상점의 차남. 24세. 성실하고 정의감이 강하며, 이나코로부터는 오빠와 같이 사모받고 있다. 약혼자인 노리코와는 견원지간으로, 노리코의 입에서 나오는 나쁜 말에는 언제나 질려 있다. 러일 전쟁 때에는 180cm가 넘는 거구와 저돌적으로 싸우는 모습으로부터 「육증기」라고 별명이 나왔을 정도. 현재는 구세군 활동을 돕는 등 자선활동에 최선을 다하고 있다.</p>
 					</div>
 					<div class="charaBox chara5" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara05_seiroku.png" style="user-select: auto;"></p>
