--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 					</div>
 					<div class="charaBox chara5" style="user-select: auto;">
 						<p class="name" style="user-select: auto;"><img src="/chara05_seiroku.png" style="user-select: auto;"></p>
-						<p class="text" style="user-select: auto;">555</p>
+						<p class="text" style="user-select: auto;">키하치의 형. 앙팡스럽지만, 가느다란 몸으로 언제나 실실거리고 있다. 사람을 놀리는 기질이 있어, 키하치는 「거짓말쟁이」라며 경계한다. 키하치에게 전기의 매력을 알려준 장본인이며, 신에 대한 의심이나 자유분방한 성격도 그를 닮았다. 높은 곳을 좋아하며, 꿈은 에펠탑에 올라가는 것. 키하치가 아버지에게 뺐겨 불태워질 뻔했던 『전기목록』을 맡고 있다.</p>
 					</div>
 				</div>
 			</div>
@@ -236,72 +236,72 @@
 						<h2 style="user-select: auto;">SPECIAL</h2>
 					</div>
 				</div>
-				<p style="user-select: auto;">スペシャル</p>
+				<p style="user-select: auto;">스페셜</p>
 			</div>
 			<div class="special" style="user-select: auto;">
 					<ul class="specialList" style="user-select: auto;">
 						<li style="user-select: auto;">
-							<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/comment/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/comment/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="./denki_files/specialList1.jpg" style="user-select: auto;">
+									<img src="/specialList1.jpg" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
-									<p class="name" style="user-select: auto;">発売記念・推薦コメント</p>
+									<p class="name" style="user-select: auto;">발매 기념·추천 코멘트</p>
 									<p class="viewmore" style="user-select: auto;">VIEW MORE<span style="user-select: auto;"></span></p>
 									</div>
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/sample/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/sample/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="./denki_files/specialList2.jpg" style="user-select: auto;">
+									<img src="/specialList2.png" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
-									<p class="name" style="user-select: auto;">試し読み</p>
+									<p class="name" style="user-select: auto;">미리보기</p>
 									<p class="viewmore" style="user-select: auto;">VIEW MORE<span style="user-select: auto;"></span></p>
 									</div>
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/map/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/map/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="./denki_files/specialList8.jpg" style="user-select: auto;">
+									<img src="/specialList8.jpg" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
-									<p class="name" style="user-select: auto;">地図で見る二十世紀電氣目録</p>
+									<p class="name" style="user-select: auto;">지도로 보는 20세기 전기목록</p>
 									<p class="viewmore" style="user-select: auto;">VIEW MORE<span style="user-select: auto;"></span></p>
 									</div>
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/glossary/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/glossary/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="./denki_files/specialList7.jpg" style="user-select: auto;">
+									<img src="/specialList7.jpg" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
-									<p class="name" style="user-select: auto;">用語集</p>
+									<p class="name" style="user-select: auto;">용어집</p>
 									<p class="viewmore" style="user-select: auto;">VIEW MORE<span style="user-select: auto;"></span></p>
 									</div>
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/presents/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/presents/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="./denki_files/specialList3.jpg" style="user-select: auto;">
+									<img src="/specialList3.jpg" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
-									<p class="name" style="user-select: auto;">アイコン・壁紙プレゼント</p>
+									<p class="name" style="user-select: auto;">아이콘·배경화면 선물</p>
 									<p class="viewmore" style="user-select: auto;">VIEW MORE<span style="user-select: auto;"></span></p>
 									</div>
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/movie/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/movie/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
 									<img src="./denki_files/specialList4.jpg" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
-									<p class="name" style="user-select: auto;">ムービー</p>
+									<p class="name" style="user-select: auto;">무비</p>
 									<p class="viewmore" style="user-select: auto;">VIEW MORE<span style="user-select: auto;"></span></p>
 									</div>
 							</a>
@@ -312,29 +312,18 @@
 									<img src="./denki_files/specialList5.jpg" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
-									<p class="name" style="user-select: auto;">ドッカンキャンペーン<span class="fin" style="user-select: auto;">※受付終了</span></p>
+									<p class="name" style="user-select: auto;">짜잔 캠페인<span class="fin" style="user-select: auto;">※접수 종료</span></p>
 									<p class="viewmore" style="user-select: auto;">VIEW MORE<span style="user-select: auto;"></span></p>
 									</div>
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/campaign_21thdenmoku/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/campaign_21thdenmoku/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="./denki_files/specialList6.jpg" style="user-select: auto;">
+									<img src="/specialList6.jpg" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
-									<p class="name" style="user-select: auto;">二十一世紀電氣目録 作品発表！</p>
-									<p class="viewmore" style="user-select: auto;">VIEW MORE<span style="user-select: auto;"></span></p>
-									</div>
-							</a>
-						</li>
-						<li style="opacity: 0; visibility: hidden; user-select: auto;" class="pc">
-							<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku//" style="user-select: auto;">
-								<div class="image" style="user-select: auto;">
-									<img src="./denki_files/specialList.jpg" style="user-select: auto;">
-								</div>
-								<div class="text" style="user-select: auto;">
-									<p class="name" style="user-select: auto;"></p>
+									<p class="name" style="user-select: auto;">21세기 전기목록 작품 발표!</p>
 									<p class="viewmore" style="user-select: auto;">VIEW MORE<span style="user-select: auto;"></span></p>
 									</div>
 							</a>
