--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 						<li style="user-select: auto;">
 							<a href="https://20thdenmoku.github.io/glossary/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="/specialList7.jpg" style="user-select: auto;">
+									<img src="/specialList7.png" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
 									<p class="name" style="user-select: auto;">용어집</p>
@@ -309,7 +309,7 @@
 						<li style="user-select: auto;">
 							<a href="https://twitter.com/KA_esuma/status/1040526005071310849" target="_blank" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="./denki_files/specialList5.jpg" style="user-select: auto;">
+									<img src="./denki_files/specialList5.png" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
 									<p class="name" style="user-select: auto;">짜잔 캠페인<span class="fin" style="user-select: auto;">※접수 종료</span></p>
@@ -320,7 +320,7 @@
 						<li style="user-select: auto;">
 							<a href="https://20thdenmoku.github.io/campaign_21thdenmoku/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="/specialList6.jpg" style="user-select: auto;">
+									<img src="/specialList6.png" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
 									<p class="name" style="user-select: auto;">21세기 전기목록 작품 발표!</p>
