--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 						<li style="user-select: auto;">
 							<a href="https://20thdenmoku.github.io/movie/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="./denki_files/specialList4.jpg" style="user-select: auto;">
+									<img src="/specialList4.jpg" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
 									<p class="name" style="user-select: auto;">무비</p>
@@ -309,7 +309,7 @@
 						<li style="user-select: auto;">
 							<a href="https://twitter.com/KA_esuma/status/1040526005071310849" target="_blank" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
-									<img src="./denki_files/specialList5.png" style="user-select: auto;">
+									<img src="/specialList5.png" style="user-select: auto;">
 								</div>
 								<div class="text" style="user-select: auto;">
 									<p class="name" style="user-select: auto;">짜잔 캠페인<span class="fin" style="user-select: auto;">※접수 종료</span></p>
