--- a/index.html
+++ b/index.html
@@ -328,12 +328,23 @@
 									</div>
 							</a>
 						</li>
+						<li style="opacity: 0; visibility: hidden; user-select: auto;" class="pc">
+							<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku//" style="user-select: auto;">
+								<div class="image" style="user-select: auto;">
+									<img src="./denki_files/specialList.jpg" style="user-select: auto;">
+								</div>
+								<div class="text" style="user-select: auto;">
+									<p class="name" style="user-select: auto;"></p>
+									<p class="viewmore" style="user-select: auto;">VIEW MORE<span style="user-select: auto;"></span></p>
+									</div>
+							</a>
+						</li>
 				</ul>
 				</div>
 			</section></div>
 		
 		<div class="specialNezumiBox" style="user-select: auto;">
-			<p class="specialNezumi" style="user-select: auto;"><img src="./denki_files/specialNezumi.png" style="user-select: auto;"></p>
+			<p class="specialNezumi" style="user-select: auto;"><img src="/specialNezumi.png" style="user-select: auto;"></p>
 		</div>
 	</div>
 	
