--- a/index.html
+++ b/index.html
@@ -358,39 +358,39 @@
 						<h2 style="user-select: auto;">BOOKS</h2>
 					</div>
 				</div>
-				<p style="user-select: auto;">書籍情報</p>
+				<p style="user-select: auto;">서적 정보</p>
 			</div>
 			<div class="books" style="user-select: auto;">
 				<div class="cover" style="user-select: auto;">
 					<img src="/book01.jpg" style="user-select: auto;"><p style="user-select: auto;"></p>
 				</div>
 				<div class="detail" style="user-select: auto;">
-					<p class="heading" style="user-select: auto;">二十世紀電氣目録</p>
+					<p class="heading" style="user-select: auto;">20세기 전기목록</p>
 					<ul class="data1" style="user-select: auto;">
-						<li style="user-select: auto;">著者：結城 弘</li>
-						<li style="user-select: auto;">イラスト：池田和美</li>
-						<li style="user-select: auto;">美術・背景：長谷百香</li>
+						<li style="user-select: auto;">저자：유키 히로</li>
+						<li style="user-select: auto;">일러스트：이케다 카스미</li>
+						<li style="user-select: auto;">미술・배경：하세 모모카</li>
 					</ul>
 					<ul class="data2" style="user-select: auto;">
-						<li style="user-select: auto;">発売日：2018年8月10日</li>
-						<li style="user-select: auto;">価格：713円(税込)</li>
+						<li style="user-select: auto;">발매일：2018년 8월 10일</li>
+						<li style="user-select: auto;">가격：713엔(세금 포함)</li>
 						<li style="user-select: auto;">ISBN：978-4-907064-88-4</li>
 					</ul>
 					<div class="saleLink" style="user-select: auto;">
 						<div class="kyoanishop" style="user-select: auto;">
 							<a href="http://kyoanishop.com/shopdetail/000000001538/" target="_blank" style="user-select: auto;">
-								京アニショップ！で購入する<span style="user-select: auto;"></span>
+								쿄애니 샵!에서 구입하기<span style="user-select: auto;"></span>
 							</a>
 						</div>
 						<div class="store" style="user-select: auto;">
 							<a href="https://www.kyotoanimation.co.jp/books/retailer/" target="_blank" style="user-select: auto;">
-								KAエスマ文庫取扱い店舗を探す<span style="user-select: auto;"></span>
+								KA에스마문고 취급 점포 찾기<span style="user-select: auto;"></span>
 							</a>
 						</div>
 					</div>
 				</div>
 		</div></section>
-		<p class="booksNezumi" style="user-select: auto;"><img src="./denki_files/booksNezumi.png" style="user-select: auto;"></p>
+		<p class="booksNezumi" style="user-select: auto;"><img src="/booksNezumi.png" style="user-select: auto;"></p>
 	</div>
 
 	<!--  フッターコンテンツ  -->
