--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 		<section class="footerContent" style="user-select: auto;">
 		<!-- SNS固定コンテンツ -->
 			<div class="snsFixed pc" style="user-select: auto;">
-				<p class="snsFixedText" style="user-select: auto;"><img src="./denki_files/snsFixedText.png" style="user-select: auto;"></p>
+				<p class="snsFixedText" style="user-select: auto;"><img src="/snsFixedText.png" style="user-select: auto;"></p>
 				<ul class="snsFixedSocialList socialList" style="user-select: auto;">
 					<li class="tw" style="user-select: auto;">
 						<a href="https://twitter.com/intent/tweet?text=KA%e3%82%a8%e3%82%b9%e3%83%9e%e6%96%87%e5%ba%ab%e3%80%8e%e4%ba%8c%e5%8d%81%e4%b8%96%e7%b4%80%e9%9b%bb%e6%b0%a3%e7%9b%ae%e9%8c%b2%e3%80%8f%e3%81%84%e3%81%a4%e3%81%a0%e3%81%a3%e3%81%a6%e4%ba%ba%e3%81%af%e6%81%8b%e3%82%92%e3%81%99%e3%82%8b%0d%0a&amp;url=http://www.kyotoanimation.co.jp/books/20thdenmoku/&amp;hashtags=%E3%81%A7%E3%82%93%E3%82%82%E3%81%8F" rel="”nofollow”" target="_blank" class="icon-tw" style="user-select: auto;"></a>
@@ -412,7 +412,7 @@
 				</ul>
 			</div>
 			<!--  pagetop  -->
-			<a href="https://www.kyotoanimation.co.jp/books/20thdenmoku/#" class="pagetop pc" style="user-select: auto;"></a>
+			<a href="https://20thdenmoku.github.io/#" class="pagetop pc" style="user-select: auto;"></a>
 			<!--  social  -->
 			<ul class="footerSocialList socialList" style="user-select: auto;">
 				<li class="tw" style="user-select: auto;">
@@ -428,15 +428,15 @@
 			<!--  banner  -->
 			<ul class="bannerList" style="user-select: auto;">
 				<li style="user-select: auto;">
-					<a href="https://www.kyotoanimation.co.jp/books/" target="_blank" style="user-select: auto;"><img src="./denki_files/kaesuma.png" alt="KAエスマ文庫" style="user-select: auto;"></a>
+					<a href="https://20thdenmoku.github.io/books/" target="_blank" style="user-select: auto;"><img src="/kaesuma.png" alt="KA에스마문고" style="user-select: auto;"></a>
 				</li>
 			</ul>
 			<!--  corporate  -->
 			<p class="corporate" style="user-select: auto;">
-				<a href="http://www.kyotoanimation.co.jp/" target="_blank" style="user-select: auto;"><img src="./denki_files/kyotoanimation.png" alt="京都アニメーション" style="user-select: auto;"></a>
+				<a href="http://www.kyotoanimation.co.jp/" target="_blank" style="user-select: auto;"><img src="/kyotoanimation.png" alt="교토 애니메이션" style="user-select: auto;"></a>
 			</p>
 			<!--  copyright  -->
-			<p class="copyright" style="user-select: auto;">©結城 弘／京都アニメーション</p>
+			<p class="copyright" style="user-select: auto;">©유키 히로／교토 애니메이션</p>
 		</section>
 	
 	
