--- a/comment.html
+++ b/comment.html
@@ -2,14 +2,6 @@
 <html lang="ja">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NF8GDXW');</script>
-<!-- End Google Tag Manager -->
-
 <meta charset="utf-8">
 <title>コメント | 『二十世紀電氣目録』公式サイト | KAエスマ文庫</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -22,9 +14,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <meta property="og:title" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫">
 <meta property="og:description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする">
-<meta property="og:url" content="http://www.kyotoanimation.co.jp/books/20thdenmoku/">
+<meta property="og:url" content="https://20thdenmoku.github.io/books/20thdenmoku/">
 <meta property="og:type" content="website">
-<meta property="og:image" content="http://www.kyotoanimation.co.jp/books/20thdenmoku/img/social.jpg">
+<meta property="og:image" content="https://20thdenmoku.github.io/books/20thdenmoku/img/social.jpg">
 <meta property="og:site_name" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫">
 <meta property="og:locale" content="ja_JP">
 
@@ -32,7 +24,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="twitter:site" content="@KA_esuma">
 <meta name="twitter:title" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫">
 <meta name="twitter:description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする">
-<meta name="twitter:image" content="http://www.kyotoanimation.co.jp/books/20thdenmoku/img/social.jpg">
+<meta name="twitter:image" content="https://20thdenmoku.github.io/books/20thdenmoku/img/social.jpg">
 
 <link rel="shortcut icon" href="/books/20thdenmoku/img/favicon.ico" type="image/vnd.microsoft.icon" sizes="16x16">
 <link rel="icon" type="image/png" href="/img/favicon.png">
@@ -72,10 +64,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <body class="dir-comment lower">
 
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF8GDXW"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 
 
 <div id="overlay"></div>
