--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					</a>
 				</li>
 				<li class="topics2" style="user-select: auto;">
-					<a href="https://20thdenmoku.github.io/comment/" style="user-select: auto;">
+					<a href="https://20thdenmoku.github.io/comment.html/" style="user-select: auto;">
 						<img src="/006.png" style="user-select: auto;">
 					</a>
 				</li>
@@ -112,7 +112,7 @@
 					</li>
 					<li style="user-select: auto;">
 						<time style="user-select: auto;">2018/10/05</time>
-						<a href="https://20thdenmoku.github.io/campaign_21thdenmoku/" style="user-select: auto;">
+						<a href="https://20thdenmoku.github.io/campaign_21thdenmoku.html/" style="user-select: auto;">
 							<div style="user-select: auto;">「Twitter기획 21세기 전기목록을 만들자!」의 작품을 발표!</div>
 						</a>
 					</li>
@@ -241,7 +241,7 @@
 			<div class="special" style="user-select: auto;">
 					<ul class="specialList" style="user-select: auto;">
 						<li style="user-select: auto;">
-							<a href="https://20thdenmoku.github.io/comment/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/comment.html/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
 									<img src="/specialList1.jpg" style="user-select: auto;">
 								</div>
@@ -252,7 +252,7 @@
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://20thdenmoku.github.io/sample/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/sample.html/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
 									<img src="/specialList2.png" style="user-select: auto;">
 								</div>
@@ -263,7 +263,7 @@
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://20thdenmoku.github.io/map/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/map.html/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
 									<img src="/specialList8.jpg" style="user-select: auto;">
 								</div>
@@ -274,7 +274,7 @@
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://20thdenmoku.github.io/glossary/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/glossary.html/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
 									<img src="/specialList7.png" style="user-select: auto;">
 								</div>
@@ -285,7 +285,7 @@
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://20thdenmoku.github.io/presents/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/presents.html/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
 									<img src="/specialList3.jpg" style="user-select: auto;">
 								</div>
@@ -296,7 +296,7 @@
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://20thdenmoku.github.io/movie/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/movie.html/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
 									<img src="/specialList4.jpg" style="user-select: auto;">
 								</div>
@@ -318,7 +318,7 @@
 							</a>
 						</li>
 						<li style="user-select: auto;">
-							<a href="https://20thdenmoku.github.io/campaign_21thdenmoku/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/campaign_21thdenmoku.html/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
 									<img src="/specialList6.png" style="user-select: auto;">
 								</div>
@@ -428,7 +428,7 @@
 			<!--  banner  -->
 			<ul class="bannerList" style="user-select: auto;">
 				<li style="user-select: auto;">
-					<a href="https://20thdenmoku.github.io/books/" target="_blank" style="user-select: auto;"><img src="/kaesuma.png" alt="KA에스마문고" style="user-select: auto;"></a>
+					<a href="http://www.kyotoanimation.co.jp/books/" target="_blank" style="user-select: auto;"><img src="/kaesuma.png" alt="KA에스마문고" style="user-select: auto;"></a>
 				</li>
 			</ul>
 			<!--  corporate  -->
