--- a/comment.html
+++ b/comment.html
@@ -3,14 +3,14 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 
 <meta charset="utf-8">
-<title>コメント | 『二十世紀電氣目録』公式サイト | KAエスマ文庫</title>
+<title>コメント | 『20세기 전기목록』 홈페이지 한글화 | KA에스마문고</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="format-detection" content="telephone=no, email=no, address=no">
 	
-<meta name="description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする 京都アニメーション新プロジェクト始動！文庫好評発売中！＆アニメにします。">
-<meta name="keywords" content="京都アニメーション,京アニ,アニメーションDo,KAエスマ文庫,二十世紀電氣目録,二十世紀電気目録,でんもく,結城 弘,池田和美,長谷百香">
-<meta name="copyright" content="©結城 弘／京都アニメーション">
+<meta name="description" content="KA에스마문고『20세기 전기목록』어느 때든 사람은 사랑을 한다 교토 애니메이션 신 프로젝트 시동! 문고 호평 발매 중! & 애니화합니다." style="user-select: auto;">
+<meta name="keywords" content="교토 애니메이션,교토 애니메이션Do,KA에스마문고,20세기 전기목록,유키 히로,이케다 카즈미,하세 모모카" style="user-select: auto;">
+<meta name="copyright" content="©유키 히로／교토 애니메이션" style="user-select: auto;">
 
 <meta property="og:title" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫">
 <meta property="og:description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする">
