--- a/comment.html
+++ b/comment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ko">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 
 <meta charset="utf-8">
@@ -12,51 +12,42 @@
 <meta name="keywords" content="교토 애니메이션,교토 애니메이션Do,KA에스마문고,20세기 전기목록,유키 히로,이케다 카즈미,하세 모모카" style="user-select: auto;">
 <meta name="copyright" content="©유키 히로／교토 애니메이션" style="user-select: auto;">
 
-<meta property="og:title" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫">
-<meta property="og:description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする">
+<meta property="og:title" content="『20세기 전기목록』 홈페이지 한글화 - KA에스마문고">
+<meta property="og:description" content="KA에스마문고『20세기 전기목록』어느 때든 사람은 사랑을 한다">
 <meta property="og:url" content="https://20thdenmoku.github.io/books/20thdenmoku/">
 <meta property="og:type" content="website">
 <meta property="og:image" content="https://20thdenmoku.github.io/books/20thdenmoku/img/social.jpg">
-<meta property="og:site_name" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫">
+<meta property="og:site_name" content="『20세기 전기목록』 홈페이지 한글화 - KA에스마문고">
 <meta property="og:locale" content="ja_JP">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@KA_esuma">
-<meta name="twitter:title" content="『二十世紀電氣目録』公式サイト - KAエスマ文庫">
-<meta name="twitter:description" content="KAエスマ文庫『二十世紀電氣目録』いつだって人は恋をする">
+<meta name="twitter:title" content="『20세기 전기목록』 홈페이지 한글화 - KA에스마문고">
+<meta name="twitter:description" content="KA에스마문고『20세기 전기목록』어느 때든 사람은 사랑을 한다">
 <meta name="twitter:image" content="https://20thdenmoku.github.io/books/20thdenmoku/img/social.jpg">
 
-<link rel="shortcut icon" href="/books/20thdenmoku/img/favicon.ico" type="image/vnd.microsoft.icon" sizes="16x16">
-<link rel="icon" type="image/png" href="/img/favicon.png">
+<link rel="shortcut icon" href="/favicon.png" type="image/vnd.microsoft.icon" sizes="16x16">
+<link rel="icon" type="image/png" href="/favicon.png">
 
-<!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Raleway:300,500" rel="stylesheet">
+<!-- fonts --->
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300&display=swap" rel="stylesheet" style="user-select: auto;">
 <!-- css -->
-<link rel="stylesheet" href="/books/20thdenmoku/css/common.css">
+<link rel="stylesheet" href="/common.css" style="user-select: auto;">
+<link rel="stylesheet" href="/main.css" style="user-select: auto;">
+<link rel="stylesheet" href="/top.css" style="user-select: auto;">
 
-<link rel="stylesheet" href="/books/20thdenmoku/css/main.css">
-<link rel="stylesheet" href="/books/20thdenmoku/css/lower.css">
 
 
 <!-- js -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script>
-<script type="text/javascript" src="/books/20thdenmoku/js/common.js"></script>
-
-<script type="text/javascript" src="/books/20thdenmoku/js/main.js"></script>
-<script type="text/javascript" src="/books/20thdenmoku/js/lower.js"></script>
-
+<script src="/jquery.min.js" style="user-select: auto;"></script>
+<script style="user-select: auto;">window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script><script src="/jquery.min.js" style="user-select: auto;"></script>
+<script type="text/javascript" src="/common.js" style="user-select: auto;"></script>
+<script type="text/javascript" src="/main.js" style="user-select: auto;"></script>
+<script type="text/javascript" src="/top.js" style="user-select: auto;"></script>
 
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-17203208-1"></script>
-<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
 
-	gtag('config', 'UA-17203208-1');
-</script>
+
 
 
 
