--- a/comment.html
+++ b/comment.html
@@ -65,18 +65,18 @@
 	<header class="headerWrap">
 		<div class="headerBox">
 			<div class="navigationBtn">
-				<h1 class="logo"><a href="/books/20thdenmoku/"><img src="/books/20thdenmoku/img/logo/logo.png"></a></h1>
+				<h1 class="logo"><a href="https://20thdenmoku.github.io/"><img src="/logo.png"></a></h1>
 				<p class="naviBtn"><span></span></p>
 			</div>
 			<nav class="navigationWrap">
 				<div class="navigationBgSp sp"></div>
-				<div class="navigationLogoSp sp"><a href="/books/20thdenmoku/"><img src="/books/20thdenmoku/img/logo/logo.png"></a></div>
+				<div class="navigationLogoSp sp"><a href="https://20thdenmoku.github.io/"><img src="/logo.png"></a></div>
 				<ul class="navigationList">
-					<li><a href="/books/20thdenmoku/#intro">INTRODUCTION</a></li>
-					<li><a href="/books/20thdenmoku/#story">STORY</a></li>
-					<li><a href="/books/20thdenmoku/#chara">CHARACTER</a></li>
-					<li><a href="/books/20thdenmoku/#special">SPECIAL</a></li>
-					<li><a href="/books/20thdenmoku/#books">BOOKS</a></li>
+					<li><a href="https://20thdenmoku.github.io/#intro">INTRODUCTION</a></li>
+					<li><a href="https://20thdenmoku.github.io/#story">STORY</a></li>
+					<li><a href="https://20thdenmoku.github.io/#chara">CHARACTER</a></li>
+					<li><a href="https://20thdenmoku.github.io/#special">SPECIAL</a></li>
+					<li><a href="https://20thdenmoku.github.io/#books">BOOKS</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -88,41 +88,41 @@
 					<h2 class="borderBox">COMMENT</h2>
 					<div class="heading">
 						<h2>COMMENT</h2>
-						<p>コメント</p>
+						<p>코멘트</p>
 					</div>
 				</div>
 			</div>
 			<div class="comment lowerItem">
 				<div class="commentBox1 lowerBox">
 					<div class="commentBoxHeading lowerBoxHeading">
-						<h4>発売記念コメント</h4>
+						<h4>발매 기념 코멘트</h4>
 					</div>
 					<div class="commentIndiv1 commentIndiv">
-						<p class="name">著者<span> ／ </span>結城 弘</p>
-						<p class="text">こんにちは、結城弘です。<br>
-							今作は明治時代が舞台ですが、明治と聞くとどんなイメージを抱かれますか。<br>
-							現代とはまるで違う世界を想像されるかもしれませんし、固い印象があるかもしれません。<br>
-							この物語は、現代を生きるみなさんと同じように登場人物たちが<br class="pc">
-							笑ったり、泣いたり、悩んだり、突っ走ったり、人を好きになったりする、そんなお話です。<br>
-							是非とも彼らの賑やかな道中を楽しんでください。</p>
+						<p class="name">저자<span> ／ </span>유키 히로</p>
+						<p class="text">안녕하세요, 유키 히로입니다.<br>
+							이번 작품은 메이지 시대가 무대인데, 메이지라고 하면 어떤 이미지가 떠오르십니까?<br>
+							현대와는 전혀 다른 세계를 상상하실 수도 있고, 딱딱한 인상이 있을지도 모릅니다.<br>
+							이 이야기는, 현대를 살아가는 여러분과 마찬가지로 등장인물들이<br class="pc">
+							웃거나, 울거나, 고민하거나, 질주하거나, 사람을 좋아하게 되거나 하는, 그런 이야기입니다.<br>
+							부디 그들의 활기찬 여행을 즐겨 주세요.</p>
 					</div>
 					<div class="commentIndiv2 commentIndiv">
-						<p class="name">イラスト<span> ／ </span>池田和美</p>
-						<p class="image"><img src="/books/20thdenmoku/img/comment/commentIkeda.jpg"></p>
+						<p class="name">일러스트<span> ／ </span>이케다 카스미</p>
+						<p class="image"><img src="/commentIkeda.jpg"></p>
 					</div>
 					<div class="commentIndiv3 commentIndiv">
-						<p class="name">美術・背景<span>／</span>長谷百香</p>
-						<p class="image"><img src="/books/20thdenmoku/img/comment/commentHase.jpg"></p>
+						<p class="name">미술・배경<span>／</span>하세 모모카</p>
+						<p class="image"><img src="/commentHase.jpg"></p>
 					</div>
 				</div>
 				<div id="recommendation" class="commentNezumiBox">
 					<p class="commentNezumi">
-						<img src="/books/20thdenmoku/img/comment/commentNezumi.png">
+						<img src="/commentNezumi.png">
 					</p>
 				</div>
 				<div class="commentBox2 lowerBox">
 					<div class="commentBox2Heading lowerBoxHeading">
-						<h4><span>京都アニメーション</span><br class="sp">石原立也 推薦コメント</h4>
+						<h4><span>교토 애니메이션</span><br class="sp">石原立也 推薦コメント</h4>
 					</div>
 					<div class="commentIndiv4 commentIndiv">
 						<p class="text">まずは私事ですが、僕が「写真」に興味を持つきっかけとなったのは<br class="pc">
