--- a/comment.html
+++ b/comment.html
@@ -122,7 +122,7 @@
 				</div>
 				<div class="commentBox2 lowerBox">
 					<div class="commentBox2Heading lowerBoxHeading">
-						<h4><span>교토 애니메이션</span><br class="sp">石原立也 推薦コメント</h4>
+						<h4><span>교토 애니메이션</span><br class="sp">이시하라 타츠야 추천 코멘트</h4>
 					</div>
 					<div class="commentIndiv4 commentIndiv">
 						<p class="text">まずは私事ですが、僕が「写真」に興味を持つきっかけとなったのは<br class="pc">
@@ -157,7 +157,7 @@
 					</div>
 				</div>
 				<div class="back">
-					<a href="/books/20thdenmoku/#special">
+					<a href="https://20thdenmoku.github.io/#special">
 					<span></span>BACK
 					</a>
 				</div>
@@ -202,15 +202,15 @@
 			<!--  banner  -->
 			<ul class="bannerList">
 				<li>
-					<a href="/books/" target="_blank"><img src="/books/20thdenmoku/img/logo/kaesuma.png" alt="KAエスマ文庫"></a>
+					<a href="/books/" target="_blank"><img src="/kaesuma.png" alt="KA에스마문고"></a>
 				</li>
 			</ul>
 			<!--  corporate  -->
 			<p class="corporate">
-				<a href="http://www.kyotoanimation.co.jp/" target="_blank"><img src="/books/20thdenmoku/img/logo/kyotoanimation.png" alt="京都アニメーション"></a>
+				<a href="http://www.kyotoanimation.co.jp/" target="_blank"><img src="/kyotoanimation.png" alt="교토 애니메이션"></a>
 			</p>
 			<!--  copyright  -->
-			<p class="copyright">&copy;結城 弘／京都アニメーション</p>
+			<p class="copyright">&copy;유키 히로／교토 애니메이션</p>
 		</section>
 	</div>
 	
