--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					</a>
 				</li>
 				<li class="topics2" style="user-select: auto;">
-					<a href="https://20thdenmoku.github.io/comment.html/" style="user-select: auto;">
+					<a href="https://20thdenmoku.github.io/comment/" style="user-select: auto;">
 						<img src="/006.png" style="user-select: auto;">
 					</a>
 				</li>
@@ -241,7 +241,7 @@
 			<div class="special" style="user-select: auto;">
 					<ul class="specialList" style="user-select: auto;">
 						<li style="user-select: auto;">
-							<a href="https://20thdenmoku.github.io/comment.html/" style="user-select: auto;">
+							<a href="https://20thdenmoku.github.io/comment/" style="user-select: auto;">
 								<div class="image" style="user-select: auto;">
 									<img src="/specialList1.jpg" style="user-select: auto;">
 								</div>
