--- a/comment.html
+++ b/comment.html
@@ -3,7 +3,7 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 
 <meta charset="utf-8">
-<title>コメント | 『20세기 전기목록』 홈페이지 한글화 | KA에스마문고</title>
+<title>코멘트 | 『20세기 전기목록』 홈페이지 한글화 | KA에스마문고</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="format-detection" content="telephone=no, email=no, address=no">
@@ -40,10 +40,10 @@
 
 <!-- js -->
 <script src="/jquery.min.js" style="user-select: auto;"></script>
-<script style="user-select: auto;">window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script><script src="/jquery.min.js" style="user-select: auto;"></script>
+<script>window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script>
 <script type="text/javascript" src="/common.js" style="user-select: auto;"></script>
 <script type="text/javascript" src="/main.js" style="user-select: auto;"></script>
-<script type="text/javascript" src="/top.js" style="user-select: auto;"></script>
+<script type="text/javascript" src="/lower.js" style="user-select: auto;"></script>
 
 
 
