--- a/comment.html
+++ b/comment.html
@@ -34,7 +34,7 @@
 <!-- css -->
 <link rel="stylesheet" href="/common.css" style="user-select: auto;">
 <link rel="stylesheet" href="/main.css" style="user-select: auto;">
-<link rel="stylesheet" href="/top.css" style="user-select: auto;">
+<link rel="stylesheet" href="/lower.css" style="user-select: auto;">
 
 
 
