--- a/comment.html
+++ b/comment.html
@@ -125,13 +125,13 @@
 						<h4><span>교토 애니메이션</span><br class="sp">이시하라 타츠야 추천 코멘트</h4>
 					</div>
 					<div class="commentIndiv4 commentIndiv">
-						<p class="text">まずは私事ですが、僕が「写真」に興味を持つきっかけとなったのは<br class="pc">
-						幕末に撮影された写真を見てからでした。<br class="pc">
-						まるで時代劇みたいな人たちが、生き生きと綺麗に映っている！<br class="pc">
-						まるでタイムマシンのようだと思いました。</p>
-						<p class="text">そして、明治に入り電化が進み、<br class="pc">
-						低い町並みに電信柱が立ち、電車の架線が張り巡らされた京都の風景は<br class="pc">
-						今見ると「ファンタジー的異世界」です。<br class="pc">
+						<p class="text">우선은 사사로운 일입니다만, 제가 「사진」에 흥미를 가지는 계기가 된 것은<br class="pc">
+						에도 막부 말기에 촬영된 사진을 보고 나서였습니다.<br class="pc">
+						마치 사극같은 사람들이 생생하고 예쁘게 나오고 있었습니다!<br class="pc">
+						마치 타임머신 같다는 생각이 들었어요.</p>
+						<p class="text">그리고 메이지 시대 들어 전철화가 진행되면서<br class="pc">
+						낮은 거리에 전신주가 세워지고, 전차의 가선이 둘러쳐진 교토의 풍경은<br class="pc">
+						「ファンタジー的異世界」です。<br class="pc">
 						当時の人々はそんな光景を目の当たりにしつつ、どんな未来を思い描いたのでしょう？<br class="pc">
 						それは西暦2000年前後のネット社会への移り変わりに匹敵するくらい<br class="pc">
 						あるいは目に見える分、それ以上に<br class="pc">
